[project]
name = "lightx02-nodes"
description = "Custom nodes for ComfyUI by Light-x02. Optimize and simplify workflows, adding utilities, samplers, schedulers and various tools (Flux, images, etc.) to enrich and extend ComfyUI’s capabilities."
version = "1.0.7"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["numpy>=1.21.0", "Pillow>=9.0.0", "aiohttp>=3.8.0"]

[project.urls]
Repository = "https://github.com/Light-x02/ComfyUI-Lightx02-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Light-x02/ComfyUI-Lightx02-Nodes/wiki"
"Bug Tracker" = "https://github.com/Light-x02/ComfyUI-Lightx02-Nodes/issues"

[tool.comfy]
PublisherId = "lightx02"
DisplayName = "ComfyUI-Lightx02-Nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility





